<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <EditText
        android:id="@+id/add_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_name"
        android:inputType="text"/>
    <EditText
        android:id="@+id/add_exercise_serial"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/serial_number"
        android:inputType="number"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/identical_serial"
        />

    <RadioGroup
        android:id="@+id/add_exercise_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/add_exercise_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:clickable="false" />

        <RadioButton
            android:id="@+id/add_exercise_button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:clickable="false" />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/add_exercise_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
</LinearLayout>